--- a/style.css
+++ b/style.css
@@ -1,4 +1,59 @@
-.footer{
-  margin-left : 80px;
-  font-size : 18px;
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background-color: #f1f1f1;
+  padding: 20px;
+  text-align: center;
+}
+
+h1 {
+  margin: 0;
+}
+
+.grid-container {
+  display: grid;
+  border-color: black;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
+
+.grid-item {
+  text-align: center;
+  border-color: black;
+  border: 1px solid black;
+}
+h1{
+  text-align: center;
+}
+
+figure {
+  margin: 10px;
+}
+
+img {
+  width: 50%;
+  height: auto;
+}
+
+figcaption {
+  margin-top: 10px;
+}
+
+.stats {
+  grid-column: span 2;
+}
+
+.stats p {
+  font-size: large;
+  line-height: 1.2;
+}
+footer{
+  position: fixed;
+  margin-bottom: auto;
+  
 }
